--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-torch==2.1.0
-torchvision==0.16.0
-transformers==4.35.0
-streamlit==1.28.0
-Pillow==10.1.0
-numpy==1.24.3
+torch>=2.5.0
+torchvision>=0.20.0
+transformers>=4.35.0
+streamlit>=1.28.0
+Pillow>=10.0.0
+numpy>=1.24.0,<2.0.0
